@@ -1,0 +1,6 @@
+language: c
+script: bash -ex .travis-ci.sh
+env:
+  - OCAML_VERSION=4.01.0 OPAM_VERSION=1.1.0
+  - OCAML_VERSION=4.00.1 OPAM_VERSION=1.1.0
+  - OCAML_VERSION=3.12.1 OPAM_VERSION=1.1.0
