@@ -1,4 +1,5 @@
 0.9.9 (07-Dec-2013):
+* Add Travis CI scripts.
 * Switch to an OASIS build system to fix META and C bindings.
 
 0.1.0 (02-Dec-2013):
